tests/integration/error/opaque_bare_parameter.alo
// expect-error: Opaque type 'Foreign' must be used by reference

extern type Foreign;

fun bad(value: Foreign) -> void {
}

fun main() -> void {
}
